# Algos_Engr_Repo

./: CMakeLists.txt  hello.csv
Data_Structures/: CMakeLists.txt  main.cpp
Data_Structures/src/: Linked_List.h  catch_config.cpp  test.cpp
graph_files/: capibility_complete.txt  capibility_cycle.txt  capibility_linear.txt  capibility_triangular.txt  capibility_uniform.txt  cycle_10.txt  cycle_5.txt  linear_10_25.txt  linear_10_40.txt  linear_5_8.txt  triangular_10_25.txt  triangular_10_40.txt  uniform_100_1200.txt  uniform_10_25.txt  uniform_10_30.txt  uniform_10_40.txt  uniform_10_45.txt  uniform_5_8.txt
graph_stats/: Capibilities.xlsx  Coloring_timing.xlsx  DFS.csv  Distros_Timing.xlsx  SLV.csv  coloring_SLV.csv  coloring_SLV_Edited.xlsx  complete.csv  complete_report.csv  cycle.csv  edited.xlsx  least_degree_last.csv  linear.csv  random.csv  test.csv  triangular.csv  uniform.csv
src/: GraphColorer.h  GraphGenerator.h  graph_coloring.cpp  graph_generation_runner.cpp  graph_stats.cpp  playground.cpp
src/Data_Structures/: Adj_List.h  Linked_List.h
src/Tests/: DS_Tests.cpp
src/Visualization/: visualizer.py
